# faro-spike-audit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/accessibility/: 00_index.md  01_tipos_de_discapacidad.md  02_perceptible.md  03_operable.md  04_comprensible.md  05_robusto.md
docs/architecture/: motor_flow.md
frontends/frontend-01/: PROBLEMAS.md  index.html
frontends/frontend-01/css/: styles.css
frontends/frontend-01/js/: main.js
frontends/frontend-01/pages/: about.html  contact.html  menu.html  reservation.html
frontends/frontend-02-no-accesible/: PROBLEMAS.md  index.html
frontends/frontend-02-no-accesible/css/: styles.css
frontends/frontend-02-no-accesible/js/: main.js
frontends/frontend-02-no-accesible/pages/: about.html  contact.html  menu.html  reservation.html
frontends/frontend-03-angular-accesible/: PROBLEMAS.md  README.md  angular.json  package-lock.json  package.json
frontends/frontend-03-angular-accesible/src/: index.html  styles.css
frontends/frontend-04-angular-no-accesible/: PROBLEMAS.md  README.md  angular.json  package-lock.json  package.json
frontends/frontend-04-angular-no-accesible/src/: index.html  styles.css
frontends/frontend-05-nextjs-accesible/: PROBLEMAS.md  package-lock.json  package.json
frontends/frontend-06-nextjs-no-accesible/: PROBLEMAS.md  package-lock.json  package.json
src/faro_spike/: __init__.py  auditor.py  main.py  models.py  remediator.py
tests/: test_auditor.py  test_strategies.py
tests/fixtures/: sample_page.html
(+80 files in other folders)
